--- a/src/pages/atf/atf-home/atf-home.html
+++ b/src/pages/atf/atf-home/atf-home.html
@@ -6,16 +6,16 @@
 </ion-header>
 <ion-content padding>
   <div padding-vertical>
-    <ion-img src="./assets/imgs/client-logo.svg" width="120" height="85"></ion-img>
+    <ion-img src="./assets/imgs/client-logo.svg" width="144" height="102"></ion-img>
   </div>
 
-  <div>
-    <ion-img src="./assets/imgs/beta-logo.svg" width="50"></ion-img>
+  <div margin-vertical class="beta">
+   <span>BETA</span>
   </div>
 
-  <div class="start-title">
-    <h1>Vehicle Standards</h1>
-    <h1>Assessment</h1>
+  <div class="start-title" padding-top>
+    <h1>Commercial Vehicle</h1>
+    <h1>Service</h1>
   </div>
 
   <h4>Mobile Test Capture</h4>
@@ -24,7 +24,7 @@
 <ion-footer>
   <div class="footer-cta-section">
     <button ion-button block (click)="getStarted()" color="secondary">
-      <span>Get Started</span>
+      <span>Get started</span>
       <img padding-left src="./assets/imgs/arrow-icon.svg">
     </button>
   </div>
