--- a/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.html
+++ b/src/pages/testing/vehicle/vehicle-history-details/vehicle-history-details.html
@@ -140,7 +140,7 @@
               <ion-badge text-uppercase [color]="getDeficiencyColor(defect.item.deficiency.deficiencyCategory)">
                 {{ defect.item.deficiency.deficiencyCategory }}
               </ion-badge>
-              <ion-badge *ngIf="defect.item.deficiency.prs" [color]="primary">PRS</ion-badge>
+              <ion-badge *ngIf="defect.item.deficiency.prs" color="tertiary">PRS</ion-badge>
             </ion-col>
           </ion-row>
           <ion-row>
