--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -18,7 +18,7 @@
       <button ion-item detail-none class="ion-item-title"
               (click)="onVehicleDetails(vehicle)">
         <ion-img item-start class="vehicle-type-icon" src="./assets/imgs/{{getVehicleTypeIconToShow(vehicle)}}-icon.svg" width="50"></ion-img>
-        <h2>{{ vehicle.vrms[0].vrm }} ({{vehicle.techRecord[0].vehicleType}})</h2>
+        <h2>{{ vehicle.vrm }} ({{vehicle.techRecord[0].vehicleType}})</h2>
         <p>{{ vehicle.vin }}</p>
         <h3 item-end class="vehicle-details">Details</h3>
         <ion-icon item-end class="arrow-forward" name="arrow-forward"></ion-icon>
