--- a/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
+++ b/src/pages/testing/vehicle/vehicle-details/vehicle-details.html
@@ -20,14 +20,11 @@
 </ion-header>
 
 <ion-content no-padding>
-    <ng-container *ngFor="let vrm of vehicleData.vrms">
         <div text-uppercase
              text-center
-             class="vehicle-header-vrm-number"
-             *ngIf="vrm.isPrimary">
-            {{ vrm.vrm }}
+             class="vehicle-header-vrm-number">
+            {{ vehicleData.vrm }}
         </div>
-    </ng-container>
 
     <ion-list class="vehicle-list">
         <ion-list-header padding-left padding-right>
