--- a/src/pages/atf/atf-home/atf-home.html
+++ b/src/pages/atf/atf-home/atf-home.html
@@ -6,7 +6,7 @@
 </ion-header>
 <ion-content padding>
   <div padding-vertical>
-    <ion-img src="./assets/imgs/client-logo.svg" width="144" height="102"></ion-img>
+    <ion-img src="./assets/imgs/client-logo.svg" width="144" height="102" (click)="enableCache()"></ion-img>
   </div>
 
   <div margin-vertical class="beta">
