--- a/src/pages/testing/defects/defect-details/defect-details.html
+++ b/src/pages/testing/defects/defect-details/defect-details.html
@@ -24,7 +24,7 @@
           <ion-badge item-end text-uppercase [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
             {{ defect.deficiencyCategory }}
           </ion-badge>
-          <ion-badge class="badge__prs" item-end text-uppercase color="primary" *ngIf="defect.prs">
+          <ion-badge class="badge__prs" item-end text-uppercase color="tertiary" *ngIf="defect.prs">
             PRS
           </ion-badge>
         </ion-row>
