--- a/src/pages/testing/test-creation/complete-test/complete-test.html
+++ b/src/pages/testing/test-creation/complete-test/complete-test.html
@@ -85,7 +85,7 @@
                                    [color]="defectsService.getBadgeColor(defect.deficiencyCategory)">
                             {{ defect.deficiencyCategory }}
                         </ion-badge>
-                        <ion-badge class="no-margin-left" item-end text-uppercase color="primary" *ngIf="defect.prs">
+                        <ion-badge class="no-margin-left" item-end text-uppercase color="tertiary" *ngIf="defect.prs">
                             PRS
                         </ion-badge>
                     </h3>
