--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -78,8 +78,8 @@
 
     <ion-card>
       <button class="btn-add-test" ion-item detail-none (click)="presentSearchVehicle()">
-        <h3>Add a trailer</h3>
-                <ion-icon aria-hidden="true" name="ios-add-circle-outline" item-end></ion-icon>
+        <span>Add a trailer</span>
+        <ion-icon aria-hidden="true" name="ios-add-circle-outline" item-end></ion-icon>
       </button>
     </ion-card>
   </ion-list>
