--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
@@ -29,5 +29,5 @@
                        (ngModelChange)="valueInputChange($event)"></ion-input>
         </ion-item>
     </ion-item-group>
-    <p padding-left>{{input.info}}</p>
+    <p class="color-grey-1" padding-left>{{input.info}}</p>
 </ion-content>
