--- a/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
+++ b/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
@@ -83,7 +83,7 @@
                             <h3>Service</h3>
                         </ion-label>
                         <div item-content padding-right>
-                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.serviceBrakeForce }}</p>
+                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.serviceBrakeForceA }}</p>
                         </div>
                     </ion-item>
                     <ion-item margin-left>
@@ -91,7 +91,7 @@
                             <h3>Secondary</h3>
                         </ion-label>
                         <div item-content padding-right>
-                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.secondaryBrakeForce }}</p>
+                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.secondaryBrakeForceA }}</p>
                         </div>
                     </ion-item>
                     <ion-item margin-left>
@@ -99,7 +99,7 @@
                             <h3>Parking</h3>
                         </ion-label>
                         <div item-content padding-right>
-                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.parkingBrakeForce }}</p>
+                            <p>{{ techRecord.brakes.brakeForceWheelsNotLocked.parkingBrakeForceA }}</p>
                         </div>
                     </ion-item>
                 </ion-list>
@@ -116,7 +116,7 @@
                             <h3>Service</h3>
                         </ion-label>
                         <div item-content padding-right>
-                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.serviceBrakeForce }}</p>
+                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.serviceBrakeForceB }}</p>
                         </div>
                     </ion-item>
                     <ion-item margin-left>
@@ -124,7 +124,7 @@
                             <h3>Secondary</h3>
                         </ion-label>
                         <div item-content padding-right>
-                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.secondaryBrakeForce }}</p>
+                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.secondaryBrakeForceB }}</p>
                         </div>
                     </ion-item>
                     <ion-item margin-left>
@@ -132,7 +132,7 @@
                             <h3>Parking</h3>
                         </ion-label>
                         <div item-content padding-right>
-                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.parkingBrakeForce }}</p>
+                            <p>{{ techRecord.brakes.brakeForceWheelsUpToHalfLocked.parkingBrakeForceB }}</p>
                         </div>
                     </ion-item>
                 </ion-list>
