--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
@@ -28,5 +28,5 @@
                        [(ngModel)]="inputValue"></ion-input>
         </ion-item>
     </ion-item-group>
-    <p class="color-grey-1" padding-left>{{input.info}}</p>
+    <p padding-left>{{input.info}}</p>
 </ion-content>
