--- a/src/pages/testing/defects/add-defect/add-defect.html
+++ b/src/pages/testing/defects/add-defect/add-defect.html
@@ -45,7 +45,7 @@
       </ion-item-divider>
       <ion-item detail-none padding-left
                 (click)="addAdvisory()">
-        <span ion-text color="dark">Add an advisory note</span>
+        Add an advisory note
         <ion-icon name="arrow-forward" item-end></ion-icon>
       </ion-item>
     </ion-item-group>
