--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -49,7 +49,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-buttons class="button-centered">
-      <button ion-button (click)="endVisit()" color="primary">
+      <button ion-button (click)="endVisit()" color="button-blue">
         End visit
       </button>
     </ion-buttons>
