--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
@@ -25,7 +25,8 @@
         <ion-item-divider padding-left>{{input.label.toUpperCase()}}</ion-item-divider>
         <ion-item padding-left>
             <ion-input [type]="input.type"
-                       [(ngModel)]="inputValue"></ion-input>
+                       [(ngModel)]="inputValue"
+                       (ngModelChange)="valueInputChange($event)"></ion-input>
         </ion-item>
     </ion-item-group>
     <p padding-left>{{input.info}}</p>
