--- a/src/pages/testing/test-creation/complete-test/complete-test.html
+++ b/src/pages/testing/test-creation/complete-test/complete-test.html
@@ -114,7 +114,7 @@
             <ion-item>
                 <ion-textarea placeholder="Add notes"
                               rows="5"
-                              [(ngModel)]="vehicleTest.additionalNotes"></ion-textarea>
+                              [(ngModel)]="vehicleTest.additionalNotesRecorded"></ion-textarea>
             </ion-item>
         </ion-item-group>
         <ion-item-group>
