--- a/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
+++ b/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
@@ -6,7 +6,7 @@
       </button>
     </ion-buttons>
     <ion-title margin-left>
-      Identify Vehicle
+      Identify vehicle
     </ion-title>
   </ion-navbar>
 </ion-header>
