--- a/src/pages/testing/vehicle/vehicle-tyres/vehicle-tyres.html
+++ b/src/pages/testing/vehicle/vehicle-tyres/vehicle-tyres.html
@@ -49,7 +49,7 @@
                         <h3>S/D index</h3>
                     </ion-label>
                     <div item-content padding-right>
-                        <p>{{ axle.tyres.dataTrPsvAxles }}</p>
+                        <p>{{ axle.tyres.dataTrAxles }}</p>
                     </div>
                 </ion-item>
                 <ion-item margin-left>
