--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
@@ -25,6 +25,7 @@
         <ion-item-divider padding-left>{{input.label.toUpperCase()}}</ion-item-divider>
         <ion-item padding-left>
             <ion-input [type]="input.type"
+                       [pattern]="input.type === testTypeFields.NUMBER ? patterns.NUMERIC : ''"
                        [(ngModel)]="inputValue"
                        (ngModelChange)="valueInputChange($event)"></ion-input>
         </ion-item>
